# Suggesto

./: .gitignore  .vercelignore  README.md  main.py  process.ipynb  pyproject.toml  requirements.txt  train_collab.py  vercel.json
models/: metadata_cache.json  songs_tfidf_indices.npy  songs_tfidf_indptr.npy  songs_tfidf_shape.txt  tfidf_indptr.npy  tfidf_shape.txt  tfidf_vectorizer.pkl  title_to_idx.pkl
modules/: __init__.py  collab_recommender.py  course_recommender.py  hybrid_recommender.py  inkpick_registry.py  movie_recommender.py  music_recommender.py  suggesto_registry.py  utils.py
processed/: courses_processed.csv  links_processed.csv  youtube_courses.csv
scripts/: convert_models.py  fetch_real_courses.py  fetch_spotify.py  generate_courses.py  generate_youtube_courses.py  process_kaggle_courses.py  process_music.py
services/: audio_service.py  cinema_service.py  edu_service.py  mapping.py  tmdb.py
static/: index.html
static/css/: mascot.css  style.css
static/js/: app.js
