[project]
name = "ml"
version = "0.1.0"
description = "Vercel optimized edition of Suggesto."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.4",
    "pandas>=2.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
    "gunicorn>=21.2.0",
]
